subprojects/swen430/src/test/resources/tests/valid/RealDiv_Valid_5.while
void main() {
    print 6.0 / 2.0;
}
