subprojects/swen430/src/test/resources/tests/invalid/Deadcode_Invalid_1.while
void foo() {
    if (true) {
        return;
    } else if (false) {
        return;
    } else {
        return;
    }

    return;
}
